2005-11-06  Paul Eggert  <eggert@cs.ucla.edu>

	* lib/system.h (strtoimax, strtoumax): Declare if the system
	headers don't.

2005-09-16  Paul Eggert  <eggert@cs.ucla.edu>

	Merge changes from gnulib for file system sub-second time stamps.
	* configure.ac: Remove checks for struct stat.st_spare1, struct
	stat.st_atim.tv_nsec, struct stat.st_atimespec.tv_nsec, struct
	stat.st_atimensec, as gnulib now does this for us.
	Similarly for LIB_CLOCK_GETTIME.

2005-06-23  Sergey Poznyakoff  <gray@Mirddin.farlep.net>

	* tests/genfile.c (print_stat): Use umaxstr.

2005-06-21  Paul Eggert  <eggert@cs.ucla.edu>

	Improve support for wide time stamps and other wide integers.
	* gnulib.modules: Add inttostr, quote, quotearg.
	* lib/system.h (TYPE_SIGNED, TYPE_MINIMUM, TYPE_MAXIMUM): Remove.
	(INT_STRLEN_BOUND): Remove.
	Include "intprops.h" instead.
	(UINTMAX_STRSIZE_BOUND): Define in terms of INT_BUFSIZE_BOUND,
	not INT_STRLEN_BOUND.
	[HAVE_UTIME_H]: Don't include utime.h.
	* paxlib/DISTFILES: Remove convert.c.
	* paxlib/convert.c: Remove.
	* paxlib/error.c: Include quote.h, quotearg.h.
	* paxlib/paxlib.h: Include inttostr.h.
	(STRINGIFY_BIGINT): Define in terms of umaxtostr.
	(stringify_uintmax_t_backwards): Remove decl.
	* tests/genfile.c: Include <utimens.h> instead of rolling our own.
	(exec_checkpoint): Use utimens instead of rolling our own.
	Don't pass extra args to error.
	(main): Wrap message inside _().

	* tests/genfile.c: Port to Solaris 8.
	Include <signal.h>, for 'signal'.
	(SIGCHLD) [! defined SIGCHLD && defined SIGCLD]: Define.
	(child_exited, sig_child): Remove; not needed.
	(exec_command): Use a prototype.
	(main): Set SIGCHLD handler to default, not to sig_child.
	And do this only if SIGCHLD is defined.  This uses the
	same pattern that src/tar.c uses.

2005-06-13  Sergey Poznyakoff  <gray@Mirddin.farlep.net>

	* m4/rmt.m4 (PU_RMT): Fix building on Cygwin. Proposed by Corinna
	Vinschen <vinschen@redhat.com>.